--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,13 +1,46 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Inicio de Sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>
+              Bienvenido
+            </ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <form [formGroup]="formulario" (submit)="validarFormulario()">
+              <ion-grid>
+                <ion-row>
+                   <ion-col>
+                     <ion-input formControlName="usuario" label="Usuario" label-placement="floating" fill="outline" ></ion-input>
+                     <br />
+                    <ion-input formControlName="contrasenia" label="Contraseña" label-placement="floating" fill="outline"  type=password ></ion-input>
+                   </ion-col>
+                 </ion-row>
+                 <ion-row>
+                   <ion-col>
+                     <ion-button role="submit" type="submit" expand="block" [disable]="cargando_bloqueo">
+                      <ion-text *ngIf= "!cargando_bloqueo">
+                        Iniciar Sesión
+                      </ion-text>
+                      <ion-spinner *ngIf="cargando_bloqueo" name="circular"></ion-spinner>
+                    </ion-button>
+                   </ion-col>
+                 </ion-row>
+               </ion-grid>
+            </form>
+          </ion-card-content>
+        </ion-card>
+        
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
